<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Kickball Umpire Assistant">
    <!ENTITY author "Pyrotemplar">
    ]>
<resources>
    <string name="app_name">Kickball Umpire Assistant</string>
    <string name="app_name_icon">Kickball Ump Assistant</string>
    <string name="test_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="feedback_email">mailto:pyrotemplardev@gmail.com</string>
    
    <string name="PDF_Google_Docs_Viewer_string">https://docs.google.com/gview?embedded=true&amp;url=</string>

    <!--Message String-->
    <string name="MS_ERROR_WARNING_EDIT_GAME_CLOCK">Must be between 1 &#8211; 180 Minutes</string>
    <string name="MS_HINT_EDIT_GAME_CLOCK">Enter in Minutes between 1 &#8211; 180</string>


    <!--SharePreference Keys-->
    <string name="setting_share_preference_key">preferenceKey</string>
    <string name="SP_HAPTIC_FEEDBACK_SETTINGS_KEY">hapticFeedbackSettingKey</string>
    <string name="SP_RESET_CLICKER_DATA_SETTINGS_KEY">resetClickerSettingKey</string>
    <string name="SP_SHARE_SCORE_SETTINGS_KEY">shareScoreSettingKey</string>
    <string name="SP_DEFAULT_EMAIL_SETTINGS_KEY">defaultEmailSettingKey</string>
    <string name="SP_THREE_FOULS_SETTINGS_KEY">threeFoulSettingKey</string>
    <string name="SP_STARTING_BALL_COUNT_KEY">startingBallCountSettingKey</string>
    <string name="SP_STARTING_STRIKE_COUNT_KEY">startingStrikeCountSettingKey</string>
    <string name="SP_STARTING_FOUL_COUNT_KEY">startingFoulCountSettingKey</string>
    <string name="SP_STARTING_OUT_COUNT_KEY">startingOutCountSettingKey</string>
    <string name="SP_MAX_NUMBER_INNING_KEY">maxNumberOfInningSettingKey</string>
    <string name="SP_FEEDBACK_KEY">feedbackKey</string>
    <string name="SP_RATE_APP_KEY">rateAppKey</string>
    <string name="inning">Inning</string>
    <string name="out">Out</string>
    <string name="foul">Foul</string>
    <string name="strike">Strike</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="runner_scored">Runner scored!</string>
    <string name="kicker_is_safe">Kicker is safe!</string>
    <string name="game_clock">Game Clock</string>

    <string name="SP_FEEDBACK_SUBJECT">Feedback for &appname;</string>
    <string name="SP_FEEDBACK_BUTTON_SUMMARY">Report any bugs or improvements to &appname;.</string>

    <string name="SP_RATE_APP_SUMMARY">Rate &appname; if you enjoyed using it.</string>
    <string name="SP_APP_INFO_TITLE">App Info</string>

    <string name="SP_APP_INFO_SUMMARY">&appname; \nVersion 1.0</string>
    <string name="EXIT_MASSAGE_PROMPT">Exiting will Reset Game Data.</string>

    <!-- Save Instance Keys -->
    <string name="Away_Team_Score">awayTeamScore</string>
    <string name="Away_Team_Color">awayTeamColor</string>
    <string name="Away_Team_Name">awayTeamName</string>
    <string name="Home_Team_Score">HomeTeamScore</string>
    <string name="Home_Team_Color">homeTeamColor</string>
    <string name="Home_Team_Name">homeTeamName</string>

    <string name="Current_Inning">CurrentInning</string>
    <string name="Is_Bottom_of_Inning">isBottomOfInning</string>

    <string name="Number_Of_Balls">NumberOfBalls</string>
    <string name="Number_Of_Strikes">NumberOfStrikes</string>
    <string name="Number_Of_Fouls">NumberOfFouls</string>
    <string name="Number_Of_Outs">NumberOfOuts</string>

    <string name="Game_Clock">gameClock</string>
    <string name="Is_Game_Clock_Running">isGameClockRunning</string>

    <string name="Undo_Stack">undoStack</string>
    <string name="Redo_Stack">redoStack</string>

</resources>
