<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="General Settings">

        <android.support.v7.preference.Preference
            android:key="@string/SP_RESET_CLICKER_DATA_SETTINGS_KEY"
            android:summary="Reset clicker and start new game"
            android:title="Reset Clicker" />

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/SP_HAPTIC_FEEDBACK_SETTINGS_KEY"
            android:summary="Phone will vibrate when buttons are touched"
            android:title="Vibrate on touch" />


    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="Share Settings">

        <android.support.v7.preference.Preference
            android:key="@string/SP_SHARE_SCORE_SETTINGS_KEY"
            android:summary="Share Game Score Via Email"
            android:title="Share Game Score" />

        <android.support.v7.preference.EditTextPreference
            android:key="@string/SP_DEFAULT_EMAIL_SETTINGS_KEY"
            android:summary="Default Email to send game score"
            android:title="Default Share Score Email"
            android:defaultValue=""
            />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="Game Settings">

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/SP_THREE_FOULS_SETTINGS_KEY"
            android:summary="If selected will count 3 Fouls as an Out."
            android:title="Three Fouls" />

        <com.pyrotemplar.refereehelper.Utils.NumberSelectorPreferenceWidget
            android:defaultValue="0"
            android:key="@string/SP_STARTING_BALL_COUNT_KEY"
            android:summary="Start Count with this number of Ball"
            android:title="Starting Balls"
            android:widgetLayout="@layout/custom_preference" />

        <com.pyrotemplar.refereehelper.Utils.NumberSelectorPreferenceWidget
            android:defaultValue="0"
            android:key="@string/SP_STARTING_STRIKE_COUNT_KEY"
            android:summary="Start Count with this number of Strikes"
            android:title="Starting Strikes"
            android:widgetLayout="@layout/custom_preference" />

        <com.pyrotemplar.refereehelper.Utils.NumberSelectorPreferenceWidget
            android:defaultValue="0"
            android:key="@string/SP_STARTING_FOUL_COUNT_KEY"
            android:summary="Start Count with this number of Fouls"
            android:title="Starting Fouls"
            android:widgetLayout="@layout/custom_preference" />

        <com.pyrotemplar.refereehelper.Utils.NumberSelectorPreferenceWidget
            android:defaultValue="0"
            android:key="@string/SP_STARTING_OUT_COUNT_KEY"
            android:summary="Start Count with this number of Outs"
            android:title="Starting Outs"
            android:widgetLayout="@layout/custom_preference" />

        <com.pyrotemplar.refereehelper.Utils.NumberSelectorPreferenceWidget
            android:defaultValue="5"
            android:key="@string/SP_MAX_NUMBER_INNING_KEY"
            android:summary="Max number of innings per game"
            android:title="Innings"
            android:widgetLayout="@layout/custom_preference" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="About the App">
        <android.support.v7.preference.Preference
            android:key="@string/SP_FEEDBACK_KEY"
            android:summary="@string/SP_FEEDBACK_BUTTON_SUMMARY"
            android:title="Feedback">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/feedback_email">
                <extra
                    android:name="android.intent.extra.SUBJECT"
                    android:value="@string/SP_FEEDBACK_SUBJECT" />

            </intent>

        </android.support.v7.preference.Preference>


        <android.support.v7.preference.Preference
            android:key="@string/SP_RATE_APP_KEY"
            android:summary="@string/SP_RATE_APP_SUMMARY"
            android:title="Rate App">

        </android.support.v7.preference.Preference>

        <android.support.v7.preference.Preference
            android:key="SP_APP_INFO_KEY"
            android:summary="@string/SP_APP_INFO_SUMMARY"
            android:title="@string/SP_APP_INFO_TITLE" />

    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>